Fix confirmation overlap backdrop

--- a/client/styles/_Calendar.scss
+++ b/client/styles/_Calendar.scss
@@ -1,6 +1,5 @@
 .full-black-cover {
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0,0,0,0.2);
   position: fixed;
   top: 0px;
   left: 0px;
